# Monkey2020

./: .gitignore  CMakeLists.txt  Cargo.toml
.github/workflows/: audit.yml  basic.yml  coverage.yml  grcov.yml
documentation/annotated-bibliography/: main.tex  references.bib
documentation/comms-report/: references.bib
documentation/software-manual/: main.tex  references.bib  system-api.tex
documentation/software-report/: abstract.tex  appendix.tex  communication.tex  intro.tex  main.tex  pathfinding.tex  references.bib  target-detection.tex
libnav/: Cargo.toml
sources/cpp/: .gitignore  CMakeLists.txt
sources/cpp/cameralot/: CMakeLists.txt
sources/cpp/cameralot/include/: camera_feed.h  capture.h
sources/cpp/cameralot/src/: c_capture.cpp  camera_feed.cpp  capture.cpp
sources/cpp/monkey-vision/: CMakeLists.txt
sources/cpp/monkey-vision-smoke-test/: CMakeLists.txt
sources/cpp/monkey-vision-smoke-test/src/: main.cpp
sources/cpp/monkey-vision/include/: monkey_vision.h
sources/cpp/monkey-vision/src/: monkey_vision.cpp
sources/cpp/visual-processing-cpp/: CMakeLists.txt
sources/cpp/visual-processing-cpp/include/: visual_processing_c.h
sources/cpp/visual-processing-cpp/src/: visual_processing_c.cpp
sources/java/steering-prototype/src/main/: Main.java  Path.java  Tuple.java  Util.java  Vec2D.java  Vehicle.java
sources/julia/: mesh_to_grid_common.jl  mesh_to_grid_math_demo.jl  mesh_to_grid_option1.jl  mesh_to_grid_option2.jl
sources/julia/nav-field/: nav_field.jl  rope_method.jl
sources/rust/: .gitignore  Cargo.toml
sources/rust/astar/: Cargo.toml
sources/rust/cameralot/: Cargo.toml
sources/rust/cameralot-demo/: Cargo.toml
sources/rust/cameralot-demo/src/: main.rs
sources/rust/cameralot/src/: extend.rs  lib.rs
sources/rust/libmonkey-sys/: Cargo.toml  build.rs
sources/rust/libmonkey-sys/src/: cameralot.rs  lib.rs  monkey_vision.rs
sources/rust/mdp/: Cargo.toml
sources/rust/mdp/src/: common.rs  lib.rs  tests.rs  value_iteration.rs
sources/rust/monkey-api/: Cargo.toml
sources/rust/monkey-api/src/: lib.rs  main.rs  requests.rs  responses.rs  routes.rs
sources/rust/monkey-api/src/objects/: mod.rs  requests.rs  responses.rs
sources/rust/monkey-pathfinding/: Cargo.toml
sources/rust/monkey-pathfinding/benches/: a_star.rs
sources/rust/monkey-pathfinding/examples/: demo.rs  prof.rs
sources/rust/monkey-pathfinding/src/: a_star.rs  demo_info.rs  heap.rs  lib.rs  model.rs  perlin.rs  state_space.rs
sources/rust/monkey-pathfinding/src/a_star/: mod.rs  tests.rs
sources/rust/monkey-unified-command/: Cargo.toml
sources/rust/monkey-unified-command/src/: camera.rs  command.rs  lib.rs  main.rs  nav.rs  util.rs
sources/rust/monkey-vision/: Cargo.toml
sources/rust/monkey-vision/src/: core.rs  lib.rs
sources/rust/nav-algo/: Cargo.toml
sources/rust/nav-algo/src/: common.rs  lib.rs
sources/rust/nav-algo/src/a_star/: mod.rs
sources/rust/nav-algo/src/heap/: mod.rs  pairing_heap.rs  tests.rs
sources/rust/nav-algo/src/mdp/: mod.rs  tests.rs  value_iteration.rs
sources/rust/nav-mdp/: Cargo.toml
sources/rust/nav-mdp/src/: forecast.rs  lib.rs  model.rs  reward.rs
sources/rust/nav-mdp/src/mdp_hooks/: mod.rs
sources/rust/nav-mdp/src/model/: continuous.rs  discrete.rs  mod.rs
sources/rust/nav-model/: Cargo.toml
sources/rust/nav-model/src/: astar.rs  forecast.rs  lib.rs  perlin.rs
sources/rust/nav-model/src/model/: discrete.rs  mod.rs
sources/rust/space-monkeys/: Cargo.toml
sources/rust/space-monkeys/src/: aimbot.rs  lib.rs  math.rs  mesh_to_grid.rs
sources/rust/test-data/: test_mesh.ply  test_mesh_2.ply
sources/rust/test-system/: Cargo.toml
sources/rust/test-system/src/: main.rs
static/: index.html
visual-processing-cpp/: CMakeLists.txt
zed/: CMakeLists.txt
