[workspace]

members = [
    "monkey-api",
    "monkey-pathfinding",
    "monkey-unified-command",
    "space-monkeys",
    "libmonkey-sys",
    "monkey-vision",
    "cameralot",
    "cameralot-demo",
    "test-system"
]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.bench]
codegen-units = 1
lto = "fat"