[package]
name = "monkey-api"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[features]

[dependencies]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.log]
version = "0.4.14"

[dependencies.monkey-vision]
path = "../monkey-vision"