[package]
name = "monkey-pathfinding"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[features]
demo = ["plotters", "plotters-backend", "num", "rand"]

[dependencies]
fasthash = "0.4.0"
derive_more = "0.99.11"

[dependencies.rand]
version = "0.8.2"
optional = true

[dependencies.num]
version = "0.3.1"
optional = true

[dependencies.plotters]
version = "0.3.0"
optional = true

[dependencies.plotters-backend]
version = "0.3.0"
optional = true

[dev-dependencies]
criterion = "0.3.3"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = "0.3.2"

[[example]]
name = "demo"
required-features = ["demo"]

[[bench]]
name = "a_star"
harness = false
required-features = ["demo"]