[package]
name = "monkey-pathfinding"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[features]
demo = ["plotters", "plotters-backend", "num", "rand"]

###################################################################################################
# Universal dependencies
###################################################################################################

[dependencies]
derive_more = "0.99.11"

[dependencies.rand]
version = "0.8.2"
optional = true

[dependencies.num]
version = "0.4.0"
optional = true

[dependencies.plotters]
version = "0.3.0"
optional = true

[dependencies.plotters-backend]
version = "0.3.0"
optional = true

###################################################################################################
# Unix-only dependencies
###################################################################################################
[target.'cfg(unix)'.dependencies]
fasthash = "0.4.0"

###################################################################################################
# Universal development dependencies
###################################################################################################
[dev-dependencies]
criterion = "0.3.3"

###################################################################################################
# Unix development dependencies
###################################################################################################
[target.'cfg(unix)'.dev-dependencies]
jemallocator = "0.3.2"

[[example]]
name = "demo"
required-features = ["demo"]

[[bench]]
name = "a_star"
harness = false
required-features = ["demo"]