[package]
name = "monkey-unified-command"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.8"
log = "0.4.14"
env_logger = "0.8.3"

###################################################################################################
# Dependencies
###################################################################################################

###############################################################################
# Async
###############################################################################
[dependencies.tokio]
version = "1.5"
features = ["rt-multi-thread", "sync", "rt", "macros"]

[dependencies.tokio-stream]
version = "0.1.5"

###############################################################################
# Web
###############################################################################
[dependencies.actix-web]
version = "3.3"
features = ["openssl"]

[dependencies.actix-web-actors]
version = "3.0.0"

[dependencies.openssl]
version = "0.10.30"
features = ["v110"]

###############################################################################
# Internal
###############################################################################
[dependencies.cameralot]
path = "../cameralot"

[dependencies.monkey-vision]
path = "../monkey-vision"

[dependencies.space-monkeys]
path = "../space-monkeys"

[dependencies.monkey-api]
path = "../monkey-api"

###################################################################################################
# Dev-Dependencies
###################################################################################################
[dev-dependencies.tokio-tungstenite]
version = "0.14.0"

[dev-dependencies.futures-util]
version = "0.3.15"