[package]
name = "monkey-unified-command"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

###################################################################################################
# Dependencies
###################################################################################################
[dependencies]
crossbeam = "0.8"
log = "0.4.14"
env_logger = "0.8.3"
actix-rt = "1.0"
tokio-stream = "0.1.5"
actix-http = "2.0"
actix-codec = "0.4.0"
tokio-util = "0.3.1"

###############################################################################
# Async
###############################################################################
[dependencies.tokio]
version = "1.5.0"
features = ["rt-multi-thread", "sync", "rt", "macros"]

###############################################################################
# Web
###############################################################################
[dependencies.actix-web]
version = "3.3"
features = ["openssl"]

[dependencies.actix-web-actors]
version = "3.0"

[dependencies.openssl]
version = "0.10.30"
features = ["v110"]

###############################################################################
# Internal
###############################################################################
[dependencies.cameralot]
path = "../cameralot"

[dependencies.monkey-vision]
path = "../monkey-vision"

[dependencies.space-monkeys]
path = "../space-monkeys"

[dependencies.monkey-api]
path = "../monkey-api"
features = ["serde"]

###################################################################################################
# Dev-Dependencies
###################################################################################################
[dev-dependencies.tokio-tungstenite]
version = "0.11.0"

[dev-dependencies.futures-util]
version = "0.3.15"