[package]
name = "space-monkeys"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>, Wallace Watler <watlerathome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
plotters = "0.3"
log = "0.4"

[dependencies.tokio]
version = "1.5.0"
features = ["rt-multi-thread", "sync", "rt", "macros"]

[dependencies.monkey-vision]
path = "../monkey-vision"

[dependencies.monkey-api]
path = "../monkey-api"

[dependencies.libmonkey-sys]
path = "../libmonkey-sys"

[dependencies.monkey-pathfinding]
path = "../monkey-pathfinding"
