[package]
name = "test-system"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>, Wallace Watler <watlerkw@msoe.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

###############################################################################
# Internal
###############################################################################
[dependencies.cameralot]
path = "../cameralot"

[dependencies.monkey-vision]
path = "../monkey-vision"

[dependencies.space-monkeys]
path = "../space-monkeys"

[dependencies.monkey-api]
path = "../monkey-api"
features = ["serialization"]

[dependencies.monkey-unified-command]
path = "../monkey-unified-command"
