[package]
name = "test-system"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>, Wallace Watler <watlerkw@msoe.edu>"]
edition = "2018"

###############################################################################
# External
###############################################################################
[dependencies]
crossbeam = "0.8"

###############################################################################
# Internal
###############################################################################
[dependencies.monkey-vision]
path = "../monkey-vision"

[dependencies.space-monkeys]
path = "../space-monkeys"

[dependencies.monkey-api]
path = "../monkey-api"
features = ["serialization"]

[dependencies.monkey-unified-command]
path = "../monkey-unified-command"
